--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -2,17 +2,21 @@
 
 body {
   margin: 0;
-  background-color: variables.$bg;
-  color: var(--text);
   font-size: 26px;
-}
-
-main {
-  display:flex;
-  flex-direction: column;
-  align-items: center;
+  font-family: variables.$primary-font;
+  color:variables.$dark-grey;
 }
 
 button {
   font-size: 1.5rem;
+}
+
+.container {
+  width:100%;
+  max-width: 1440px;
+}
+
+.container__full {
+  width: 100%;
+  height: auto;
 }
