--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
-  background: url("../images/cat.jpg");
-  background-size: cover;
-  background-position: center;
-  min-height: 300px;
-  width: 100%;
+  background: url("../images/Ipads.png");
+  background-size: contain;
+  background-position: right;
+  background-repeat: no-repeat;
+  min-height: 900px;
 }
