--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -1,5 +1,30 @@
 @use "variables";
 
 .contact {
+  padding-top:70px;
   background-color: variables.$background-blue;
+}
+
+.contact__box {
+  width:90%;
+  max-width: 960px;
+  margin:0 auto 100px auto;
+  padding-bottom:64px;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
+}
+
+.contact__footer {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact__footer p:nth-child(2) {
+  margin:auto;
 }
