--- a/src/styles/_features.scss
+++ b/src/styles/_features.scss
@@ -4,8 +4,10 @@
 }
 
 .features__container {
+  width:100%;
   display:flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .features__header {
