--- a/src/styles/feature.scss
+++ b/src/styles/feature.scss
@@ -1,10 +1,16 @@
+@use "variables" as v;
+
 .feature {
   display:flex;
   align-items: center;
   width:calc(33% - 2rem);
-  margin-right:2rem;
+  min-width: 400px;
+  // margin:0 1rem;
   margin-bottom: 2rem;
   background-color:#fff;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
+  color: v.$grey;
 }
 
 .feature__icon {
