basic blocked styles ready. mobile still needed and copywrite

--- a/src/styles/_feature.scss
+++ b/src/styles/_feature.scss
@@ -16,4 +16,13 @@
 .feature__icon {
   width:40px;
   height:40px;
+  padding: 0 32px;
+}
+
+.feature__header {
+  margin:24px 0;
+}
+
+.feature__body {
+  padding-bottom: 2rem;
 }
