--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -19,10 +19,48 @@
   border-radius: 4px;
 }
 
+.contact__heading {
+  margin:40px 0 0 0;
+}
+
+.contact__subheading {
+  margin: 32px 0 44px 0;
+}
+
+.contact__form {
+  display:flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.contact__input {
+  display:flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+
+  input {
+    height: 64px;
+    background-color:#F6F6F6;
+    border:none;
+    border-radius: 4px;
+    margin:16px 24px 0 0;
+  }
+  label {
+    font-weight:700;
+    font-size: 18px;
+    color:#878A8C;
+  }
+}
+
 .contact__footer {
   display:flex;
   justify-content: center;
   align-items: center;
+}
+
+.contact__footer p:first-child {
+  margin-left:80px;
 }
 
 .contact__footer p:nth-child(2) {
