--- a/src/styles/_feature.scss
+++ b/src/styles/_feature.scss
@@ -1,28 +1,90 @@
 @use "variables" as v;
+@use "mixins";
 
 .feature {
-  display:flex;
+  display: flex;
   align-items: center;
-  width:calc(33% - 2rem);
+  width: calc(33% - 2rem);
   min-width: 400px;
   // margin:0 1rem;
   margin-bottom: 2rem;
-  background-color:#fff;
+  background-color: #fff;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
   border-radius: 4px;
   color: v.$grey;
+
+  @include mixins.for-small {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 24px;
+    min-width: unset;
+    max-width: 450px;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  @include mixins.for-medium {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 24px;
+    min-width: unset;
+    max-width: 450px;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  @include mixins.for-large {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 24px;
+    min-width: unset;
+    max-width: 450px;
+    width: 100%;
+    box-sizing: border-box;
+  }
 }
 
 .feature__icon {
-  width:40px;
-  height:40px;
+  font-size:36px;
   padding: 0 32px;
+  color: v.$grey;
+  
+  @include mixins.for-small {
+    padding: 0;
+    font-size:32px;
+  }
+  @include mixins.for-medium {
+    padding: 0;
+    font-size:32px;
+  }
+  @include mixins.for-large {
+    padding: 0;
+    font-size:36px;
+  }
 }
 
 .feature__header {
-  margin:24px 0;
+  margin: 24px 0;
 }
 
 .feature__body {
   padding-bottom: 2rem;
+  padding-right:32px;
+  margin: 0;
+  @include mixins.for-small {
+    padding: 0;
+  }
+  @include mixins.for-medium {
+    padding: 0;
+  }
+  @include mixins.for-large {
+    padding: 0;
+  }
+}
+
+.feature__card {
+  height: 100%;
+  display:flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items:flex-start;
+
 }
