--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,23 +1,89 @@
 @use "variables" as v;
+@use "mixins";
 
 .hero {
   background: url("../images/Ipads.png");
   background-size: contain;
-  background-position: right;
+  background-position: top right;
   background-repeat: no-repeat;
   min-height: 850px;
+
+  @include mixins.for-small {
+    background-position: 85% 240px;
+    background-size: 250%;
+  }
+  @include mixins.for-medium {
+    background-position: 75% 180px;
+    background-size: cover;
+  }
+  @include mixins.for-large {
+    background-position: 85px 90%;
+    background-size: contain;
+  }
+  @include mixins.for-xlarge {
+    background-position: top right;
+    background-size: contain;
+  }
 }
 
 .hero__logo {
   margin: 48px 0 0 0;
+  @include mixins.for-small {
+    width:85px;
+    margin:24px 0 0 0;
+  }
+  @include mixins.for-medium {
+    width:85px;
+    margin:24px 0 0 0;
+  }
+  @include mixins.for-large {
+    width:auto;
+    margin: 48px 0 0 0;
+  }
 }
 
 .hero__header {
   margin: 120px 0 0 0;
+  @include mixins.for-small {
+    margin-top: 56px;
+  }
+  @include mixins.for-medium {
+    margin-top: 56px;
+  }
+  @include mixins.for-large {
+    margin-top: 56px;
+  }
 }
 
 .hero__textbox {
   margin-left: 64px;
+  @include mixins.for-small {
+    margin-left: 16px;
+  }
+  @include mixins.for-medium {
+    margin-left: 32px;
+  }
+  @include mixins.for-large {
+    margin-left: 48px;
+  }
+  @include mixins.for-xlarge {
+    margin-left: 64px;
+  }
+}
+
+.hero__textbox button {
+  @include mixins.for-small {
+    font-size: 16px;
+    height: 48px;
+    width: 130px;
+    padding: 15px 16px;
+  }
+  @include mixins.for-medium {
+    font-size: 16px;
+    height: 48px;
+    width: 130px;
+    padding: 15px 16px;
+  }
 }
 
 .hero__subheader {
