--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,10 +1,9 @@
 @use "variables";
-// @mixin for-large-test {
-//   @media(min-width:555px){
-//     @content;
-//   }
-// }
 @use "mixins";
+
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   margin: 0;
@@ -134,6 +133,11 @@ body {
   img {
     margin-left: 10px;
   }
+}
+
+.button--link {
+  text-decoration: none;
+  width:max-content;
 }
 
 .invisible {
