--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -1,9 +1,9 @@
-@use "variables";
+@use "variables" as v;
 @use "mixins";
 
 .contact {
   padding-top:70px;
-  background-color: variables.$background-blue;
+  background-color: v.$background-blue;
   @include mixins.for-small {
     padding-top: 40px;
   }
@@ -29,12 +29,12 @@
   border-radius: 4px;
   @include mixins.for-small {
     width: 100%;
-    padding-bottom: 24px;
+    padding-bottom: 48px;
     margin-bottom: 24px;
   }
   @include mixins.for-medium {
     width: 100%;
-    padding-bottom: 24px;
+    padding-bottom: 48px;
     margin-bottom: 24px;
   }
   @include mixins.for-large {
@@ -48,6 +48,7 @@
 
 .contact__subheading {
   margin: 32px 0 44px 0;
+  text-align: center;
 }
 
 .contact__br {
@@ -63,79 +64,15 @@
   }
 }
 
-.contact__form {
-  display:flex;
-  justify-content: center;
-  align-items: flex-end;
-  @include mixins.for-small {
-    flex-direction: column;
-    align-items: stretch;
-    width:100%;
-    padding: 0 24px;
-    box-sizing:border-box;
-  }
-  @include mixins.for-medium {
-    flex-direction: column;
-    align-items: stretch;
-    width:100%;
-    padding: 0 24px;
-    box-sizing:border-box;
+.contact__link {
+  font-size: 18px;
+  font-weight: 700;
+  color: v.$button-blue;
+  text-decoration: none;
+  &:hover {
+    color:darken(v.$button-blue, 10%)
   }
 }
-
-.contact__form .button {
-  @include mixins.for-small {
-    height:48px;
-  }
-  @include mixins.for-medium {
-    height:48px;
-  }
-}
-
-.contact__input {
-  display:flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-end;
-
-  input {
-    min-width:348px;
-    height: 64px;
-    background-color:#F6F6F6;
-    border:none;
-    border-radius: 4px;
-    margin:16px 24px 0 0;
-    font-size:18px;
-    color: variables.$dark-grey;
-    padding-left:16px;
-    @include mixins.for-small {
-      width:100%;
-      box-sizing: border-box;
-      margin-bottom:16px;
-      min-width:unset;
-      height:48px;
-    }
-    @include mixins.for-medium {
-      width:100%;
-      box-sizing: border-box;
-      margin-bottom:16px;
-      min-width:unset;
-      height:48px;
-    }
-  }
-  label {
-    font-weight:700;
-    font-size: 18px;
-    color:#878A8C;
-    @include mixins.for-small {
-      font-size: 16px;
-    }
-    @include mixins.for-medium {
-      font-size: 16px;
-    }
-  }
-}
-
 
 
 .contact__footer {
@@ -158,27 +95,10 @@
 }
 
 .contact__footer p:first-child {
-  margin-left:80px;
   @include mixins.for-small {
-    margin-left: 0;
     margin-top: 48px;
   }
   @include mixins.for-medium {
-    margin-left: 0;
     margin-top: 48px;
-  }
-}
-
-.contact__footer p:nth-child(2) {
-  margin:auto;
-}
-
-.contact__footer p:last-child {
-  margin-right:80px;
-  @include mixins.for-small {
-    display: none;
-  }
-  @include mixins.for-medium {
-    display: none;
   }
 }
