--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -96,3 +96,13 @@
   line-height: 38px;
   color: v.$grey;
 }
+
+.hero__br {
+  display:block;
+  @include mixins.for-small {
+    display:none;
+  }
+  @include mixins.for-medium {
+    display:none;
+  }
+}
