Added react router for multi-pages as well as language toggle. Reorganized files into page folders

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @use "../../node_modules/normalize.css/normalize.css";
 @use "global";
+@use "navbar";
 @use "hero";
 @use "showcase";
 @use "features";
