--- a/src/styles/_what.scss
+++ b/src/styles/_what.scss
@@ -65,6 +65,14 @@
   }
 }
 
+.what__ul {
+  margin:0;
+}
+
+.what__li {
+  padding-top:1rem;
+}
+
 .what__image {
   width:55%;
   @include mixins.for-small {
