--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -83,3 +83,84 @@
     cursor:unset;
   }
 }
+
+.hamburgerNavbar {
+  position:absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow-x:hidden;
+  z-index: 2;
+  background-color: rgba(0,0,0,0.3);
+  transition: ease all 300ms;
+}
+
+.hamburgerNavbar--closed {
+  background-color:unset;
+}
+
+.hamburgerNavbar__container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width:350px;
+  background:white;
+  display:flex;
+  flex-direction: column;
+  z-index: 3;
+  transition: ease all 300ms;
+}
+
+.hamburgerNavbar__container--closed {
+  transform:translateX(350px)
+}
+
+.hamburgerNavbar__icon {
+  position:absolute;
+  top: 10px;
+  right: 25px;
+  z-index: 10;
+
+  /* menu bars in icon */
+  .bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+  }
+
+  /* Rotate first bar */
+  .change.bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+    transform: rotate(-45deg) translate(-9px, 6px) ;
+  }
+
+  /* Fade out the second bar */
+  .change.bar2 {
+    opacity: 0;
+  }
+
+  /* Rotate last bar */
+  .change.bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+    transform: rotate(45deg) translate(-8px, -8px) ;
+  }
+}
+
+.hamburgerNavbar__ul {
+  display:flex;
+  flex-direction: column;
+
+  li {
+    padding:2rem 1rem;
+
+  }
+}
+
+.body--modal-open{
+  height:100vh;
+  overflow: hidden;
+}
