--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,4 +1,5 @@
 @use "mixins";
+@use "variables" as v;
 
 .navbar {
   position:absolute;
@@ -84,6 +85,8 @@
   }
 }
 
+// small site menu styles //
+
 .hamburgerNavbar {
   position:absolute;
   top: 0;
@@ -153,10 +156,29 @@
 .hamburgerNavbar__ul {
   display:flex;
   flex-direction: column;
+  list-style: none;
+  padding-left:0;
+  margin-top:60px;
 
   li {
-    padding:2rem 1rem;
+    font-size:24px;
+    border-bottom: 1px solid v.$grey;
+    &:last-child {
+      border-bottom:none;
+    }
 
+    a, a:focus, a:visited{
+      display:inline-block;
+      width:100%;
+      height:100%;
+      color: v.$dark-grey;
+      padding:2rem 1rem;
+      text-decoration: none;
+      box-sizing: border-box;
+    }
+    a:hover {
+      background-color:v.$background-blue;
+    }
   }
 }
 
