--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 
-$primary-font: 'Roboto', sans-serif;
+$primary-font: "Roboto", sans-serif;
 
 $dark-grey: #202427;
-$grey: #363F49;
+$grey: #363f49;
 
-$background-blue:#F5FBFD;
-$button-blue: #0076BF;
+$background-blue: #f5fbfd;
+$button-blue: #0076bf;
+$reki-green: #20c9b0;
